# eeg_research

./: .gitignore  .gitmodules  APP_NAME.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eeg_research.html  index.html  output_annotations_serie_cleaning_out.txt  pyproject.toml  search.js
.github/workflows/: docs.yaml  test.yaml
eeg_research/: algorithms.html  analysis.html  cli.html  preprocessing.html  simulators.html  toolbox.html
eeg_research/analysis/: pipelines.html  tools.html
eeg_research/analysis/pipelines/: signal_metrics.html
eeg_research/analysis/tools/: freq_analysis.html  time_analysis.html
eeg_research/cli/: pipelines.html  tools.html
eeg_research/cli/pipelines/: eeg_fmri_cleaning.html
eeg_research/cli/tools/: bids_parser.html  interactive_menu.html
eeg_research/preprocessing/: pipelines.html  tools.html
eeg_research/preprocessing/pipelines/: bcg_cleaning_pipeline.html  eeg_preprocessing_pipeline.html  gradient_cleaning_pipeline.html
eeg_research/preprocessing/tools/: gradient_remover.html  utils.html
eeg_research/simulators/: bids_dataset_simulators.html  cleaner_pipelines.html  decorators.html  main_cleaner_pipelines.html  path_handler.html  signals.html  simulated_data.html
eeg_research/simulators/signals/: electrophysiology.html  environment.html
eeg_research/simulators/signals/electrophysiology/: bcg.html  ecg.html  edg.html  eeg.html  emg.html  eog.html
eeg_research/simulators/signals/environment/: misc_noise.html  mri_gradient.html  powerline.html
eeg_research/toolbox/: generate_test_templates.html
src/eeg_research/: algorithms.py
src/eeg_research/analysis/pipelines/: envelope_and_tf_extraction.py  signal_metrics.py
src/eeg_research/analysis/tools/: freq_analysis.py  time_analysis.py
src/eeg_research/cli/pipelines/: eeg_fmri_cleaning.py
src/eeg_research/cli/tools/: bids_parser.py  interactive_menu.py  layout.py  parser.py
src/eeg_research/io/: __init__.py  xdf.py
src/eeg_research/labs/eeg_troubleshooting_harlem_MOBI/: eeg_noise_vizualisation.ipynb
src/eeg_research/labs/eeg_troubleshooting_harlem_MOBI/test_noise_60s_20240422_025708.mff/: coordinates.xml  epochs.xml  info.xml  info1.xml  log_test_noise_60s_20240422_025708.txt  recordingSettings.xml  sensorLayout.xml  subject.xml  techNote.rtf  workspace.plist
src/eeg_research/labs/eeg_troubleshooting_harlem_MOBI/test_noise_60s_20240422_025708.mff/Contents/: PkgInfo
src/eeg_research/preprocessing/pipelines/: bcg_cleaning.py  bcg_cleaning_pipeline.py  cleaner_pipelines.py  eeg_preprocessing_pipeline.py  gradient_cleaning.py  gradient_cleaning_pipeline.py  main_cleaner_pipelines.py  rockland_sample_cleaning_pipeline.py  test_pipeline_blink_and_muscles.ipynb
src/eeg_research/preprocessing/tools/: GradientRemover.py  artifacts_annotator.py  blinks_remover.py  channels_handling.py  functions.py  muscle_annotator.py  utils.py
src/eeg_research/simulators/: bids_simulator.py  cleaner_pipelines.py  decorators.py  eeg_simulator.py  main_cleaner_pipelines.py  path_handler.py  simulate_data.py  simulated_data.py
src/eeg_research/system/: bids_selector.py  bids_simulator.py  path_handler.py  test_lab.ipynb
src/eeg_research/toolbox/: data_representation.py  generate_test_templates.py
tests/: test_fibonacci.py
tests/analysis/pipelines/: test_signal_metrics.py
tests/analysis/tools/: test_freq_analysis.py  test_time_analysis.py
tests/cli/pipelines/: test_eeg_fmri_cleaning.py
tests/cli/tools/: test_bids_parser.py  test_interactive_menu.py  test_layout.py  test_parser.py
tests/preprocessing/pipelines/: test_bcg_cleaning.py  test_bcg_cleaning_pipeline.py  test_eeg_preprocessing_pipeline.py  test_gradient_cleaning.py  test_gradient_cleaning_pipeline.py
tests/preprocessing/tools/: test_GradientRemover.py  test_functions.py  test_gradient_remover.py  test_utils.py
tests/simulators/: test_bids_simulator.py  test_cleaner_pipelines.py  test_decorators.py  test_main_cleaner_pipelines.py  test_path_handler.py  test_simulated_data.py
tests/system/: test_bids_selector.py  test_bids_simulator.py  test_path_handler.py
tests/toolbox/: test_generate_test_templates.py
