[tool.poetry]
name = "eeg_research"
version = "0.1.0"
description = "All tools and pipelines developed for eeg research"
authors = ["Samuel Louviot <sam.louvito@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "eeg_research", from = "src"}]

[tool.poetry.scripts]
eeg_fmri_cleaning = 'eeg_research.cli.pipelines.eeg_fmri_cleaning:main'

[tool.poetry.dependencies]
python = "~3.12"
simple-term-menu = "^1.6.4"
pybids = "^0.17.2"
mne = "^1.8.0"
numpy = "^2.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
asrpy = "^0.0.3"
pyprep = "^0.4.3"
neurokit2 = "^0.2.10"
pybv = "^0.7.5"
eeglabio = "^0.0.2.post4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
pre-commit = "^3.7.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
ipykernel = "^6.29.5"
pytest-mock = "^3.14.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true
exclude = "^data/"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"
extend-exclude = [
  "*.ipynb",
  "src/eeg_research/labs",
  "bids-examples"
]

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
